containers alignment fixed

--- a/styles/directory.css
+++ b/styles/directory.css
@@ -166,14 +166,21 @@
 
 /* cards */
 .agency-card {
-  flex: 0 0 20em;
+  width: 300px;
   border: 1px solid #222220;
   padding: 1%;
   margin: 20px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+}
+
+.agency-card .agency-card-head {
+  margin: 0 auto;
+  display: flex;
   align-items: center;
+  max-height: 150px;
+  height: 100%;
 }
 
 .agency-card .agency-image {
@@ -337,14 +344,18 @@
 
 @media (max-width: 4000px) {
   .agencies-container {
-    max-width: 2800px;
+    max-width: 2500px;
   }
   .agency-card {
-    flex: 0 0 28em;
+    width: 400px;
+  }
+
+  .agency-card .agency-card-head {
+    max-height: 200px;
   }
 
   .agency-card .agency-image {
-    max-width: 450px;
+    max-width: 350px;
   }
 
   .agency-list {
@@ -354,14 +365,25 @@
 
 @media (max-width: 3000px) {
   .agencies-container {
-    max-width: 2500px;
+    max-width: 2000px;
   }
   .agency-card {
-    flex: 0 0 15em;
+    width: 350px;
+  }
+
+  .agency-card .agency-card-head {
+    max-height: 170px;
+  }
+
+  .agency-card .agency-image {
+    max-width: 300px;
   }
   .agency-list {
     height: 8vh;
   }
+}
+
+@media (max-width: 2560px) {
 }
 
 @media (max-width: 2000px) {
@@ -369,10 +391,15 @@
     max-width: 1800px;
   }
   .agency-card {
-    width: 315px;
+    width: 300px;
   }
+
   .agency-card .agency-image {
-    max-width: 280px;
+    max-width: 270px;
+  }
+
+  .agency-card .agency-region {
+    font-size: 16px;
   }
 
   .agency-list {
@@ -386,34 +413,90 @@
   }
 
   .agency-card {
-    width: 250px;
+    width: 280px;
+  }
+
+  .agency-card .agency-card-head {
+    max-height: 130px;
   }
   .agency-card .agency-image {
     max-width: 230px;
+  }
+
+  .agency-card .agency-region {
+    font-size: 14px;
   }
 
   .agency-list {
     height: 12vh;
   }
 }
-@media (max-width: 1400px) {
+@media (max-width: 1500px) {
   .agencies-container {
-    max-width: 1400px;
+    max-width: 1200px;
   }
   .agency-card {
-    width: 150px;
+    width: 230px;
+  }
+
+  .agency-card .agency-card-head {
+    max-height: 140px;
   }
   .agency-card .agency-image {
-    max-width: 220px;
+    max-width: 200px;
+  }
+
+  .agency-card .agency-region {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 1400px) {
+  .agencies-container {
+    max-width: 1100px;
+  }
+  .agency-card {
+    width: 200px;
+  }
+
+  .agency-card .agency-card-head {
+    max-height: 120px;
+  }
+  .agency-card .agency-image {
+    max-width: 180px;
+  }
+
+  .agency-card .agency-card-body h2 {
+    font-size: 20px;
+  }
+
+  .agency-card .agency-region {
+    font-size: 12px;
   }
 }
 
 @media (max-width: 1300px) {
   .agencies-container {
-    max-width: 1300px;
+    max-width: 1100px;
   }
 
   .agency-card {
-    width: 100px;
+    width: 200px;
+  }
+  .agency-card .agency-image {
+    max-width: 180px;
+  }
+
+  .agency-card .agency-info p {
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .agency-card .agency-info p > span {
+    margin-left: 10%;
+  }
+
+  .agency-card .agency-info .agency-link {
+    font-size: 12px;
   }
 }
